--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
 
-  <center><button type="button" onclick="reloadPage()" class="btn"  >clisk me
+  <center><button type="button" onclick="reloadPage()" class="btn"  > <b>Click me</b>
 </button></center>
 
 </body>
